@@ -289,7 +289,9 @@ sub _value_to_cfg {
     $binary_str = $self->encode([ { ... }, ... ]);
 
 Encodes an array of hashes, containing the DOCSIS config-file settings and
-returns a binary encoded string.
+returns a binary encoded string. See L</DESCRIPTION> and the unit tests for
+example input. For other structures, see the table generated by
+L<DOCSIS::ConfigFile::Syminfo/dump_symbol_tree>.
 
 =cut
 
